# TaskForge

./: LICENSE.txt  README.md  TaskForge.sln
TaskForge/: CMakeLists.txt  README.md  TaskForge.vcxproj  TaskForge.vcxproj.filters  main.cpp  tasks.json
TaskForge/include/: Task.h  TaskManager.h  colors.cpp  colors.h  commands.h  json.hpp
TaskForge/src/: Task.cpp  TaskManager.cpp  commands.cpp
